webapps/ROOT/assets/styles/site.css
/* language */

*[lang="la"] {
    font-family: "GentiumAlt", "Gentium","Palatino Linotype", "Palatino", "Times New Roman", "Times", "Arial Unicode MS", serif;
}

*[lang="grc"] {
    font-family: "Lucida Grande", "Arial Unicode MS","Galilee Unicode Gk", "New Athena Unicode", "Athena Unicode",
    "Palatino Linotype", "Titus Cyberbit Basic", "Cardo", "Vusillus Old Face", "Alphabetum", "Galatia SIL",
    "Code 2000", "GentiumAlt", "Gentium", "Minion Pro", "GeorgiaGreek", "Vusillus Old Face Italic",
    "Everson Mono", "Aristarcoj", "Porson", "Legendum", "Aisa Unicode", "Hindsight Unicode", "Caslon",
    "Verdana", "Tahoma";
}

/* defaults */
body { background-color: white; color: black; font:13px/1.231 arial,helvetica,clean,sans-serif }

h1 { color: #3e4c58; font: bold 1.5em Georgia, Helvetica, sans-serif; border-bottom: 1px solid #8192A1;}
h2 { color: #285072; font: bold 1.25em Arial, Helvetica, sans-serif; }
h3 { color: #7e8d9a; font: bold 1.05em Arial, Helvetica, sans-serif; }
h4 { color: #535a60; font: 1em Arial, Helvetica, sans-serif;}
h5 { color: #333333; font: bold .85em Arial, Helvetica, sans-serif;}

a:link { color: #5a758c; }
a:visited { color: #800080; }
a:hover { color: #8b9caa; background-color: #ffff80; }
a:active { color: #006666; }


p {color: #333;}

/* grid adjustments */

.row,
.contain-to-grid .top-bar { max-width: 100%; margin-bottom: inherit;}

/* banner */

#banner {
    height: 158px;
    background: #356a94;
}

#sea_of_loneliness {
    background: url(../images/bs.h3x.png) no-repeat scroll 0 0 transparent;
    height: 158px;
}

#sea_of_loneliness_the_second {
    height: 158px;
}


#logo {
    display: block;
    height: 92px;
    margin-top: 66px;
    width: 486px;
}


#logo img {
    width: 486px;
    height: 92px;
}

#griffin {
    background: url(../images/griffin.png) no-repeat scroll transparent;
    background-position: bottom right;
    display: block;
    margin-top: -108px;
    margin-right: 20px;
    height: 143px;
}

@media only screen and (max-width: 767px) {
  #griffin {
    background: none;
    height: 0;
  }
}

@media only screen and (min-width: 1240px) {
    #griffin {
        background-position: -8px bottom;
    }
}


a#logo:hover,
a#logo:visited,
a#logo:active,
a#griffin:hover,
a#griffin:visited,
a#griffin:active {
    background-color: transparent;
}

/* navigation */

.contain-to-grid {
    background: transparent;
}

.top-bar {
    font-size: 1.3em;
    background: url(../images/nvg.png) repeat-x scroll 0 100% transparent;
}

.top-bar .name {
    height: 143px;
}

.top-bar-section ul,
.top-bar-section .has-form {
    background: transparent;
}

.top-bar > section > ul > li {
    background: url(../images/ns.li.png) no-repeat scroll 100% 48% transparent
}

.top-bar-section li a:not(.button) {
    background: transparent;
    line-height: 31px;
    vertical-align: middle;
}

.top-bar-section li a:link,
.top-bar-section li a:visited {
    color: #344f5f;
    font-weight: 700;
}

.top-bar-section ul li.active>a,
.top-bar-section li a:hover,
.top-bar-section li a:active {
    background: #e1e1e1;
}

.top-bar-section .dropdown  {
    background: #f4f4f4;
}

.top-bar-section .dropdown li a {
    font-weight: normal;
    font-size: .7em;
    line-height: 1.35em;
}

/* this removes the dropdown arrows */
.top-bar-section .has-dropdown>a  {
    padding-right: 15px !important;
}

.top-bar-section .has-dropdown>a:after {
    content: "";
    border: none;
}

/* language menu */

.top-bar-section .language-choice {
    margin-right: 20px;
}

.top-bar-section .language-choice li {
    background: transparent;
}

.top-bar-section .language-choice li.lang a {
    width: 45px;
}

.top-bar-section .language-choice li.lang a {
    text-indent: -5000px;
}

.top-bar-section .language-choice li.lang.py a {
    background: url(../images/py-button.png) no-repeat scroll 0 -1px transparent;
}

.top-bar-section .language-choice li.lang.en a {
    background: url(../images/en-button.png) no-repeat scroll 0 -1px transparent;
}

/* rock on the left */

#rock {
    background: url(../images/side_bg.png) no-repeat scroll transparent;
    background-position: right -65px;
    min-height: 690px;

}

@media only screen and (max-width: 767px) {
  #rock {
    background: none;
    height: 0;
    min-height: 0;
  }
}


@media only screen and (min-width: 1240px) {
    #rock {
        background-position: left  -65px;
    }
}

/* tei body */

.tei.body ul, .tei.body ol {list-style-type: none}

